--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>test-ITFB</title>
+        <title>jsonplaceholder fake rest-api</title>
         <meta name="description" content="">
         <meta name="viewport" content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href='css/style.css'>
